--- a/recovery_init.rc
+++ b/recovery_init.rc
@@ -7,14 +7,16 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export EXTERNAL_STORAGE /sdcard
+    export INTERNAL_STORAGE /emmc
 
     symlink /system/etc /etc
 
     mkdir /boot
-    mkdir /sdcard
     mkdir /sd-ext
     mkdir /datadata
+    mkdir /mnt
     mkdir /emmc
+    mkdir /sdcard 
     mkdir /system
     mkdir /data
     mkdir /cache
